# microdata-crypt

./: .gitignore  README.md  SECURITY.md  azure-pipelines.yml  pyproject.toml
decrypt/: microdata_decrypt_datasets.py
encrypt/: microdata_encrypt_datasets.py
microdata_crypt/: __init__.py  utils.py
microdata_crypt/encrypt/: __init__.py
rsa/: create_rsa_keys.py  generate_rsa_keys.py
tar/: create_tar_file.py
tests/resources/input/DATASET_2/: DATASET_2.csv
tests/unit/: test_package.py
