[tool.poetry]
name = "microdata-crypt"
version = "0.1.0"
description = ""
authors = ["Kalantzakos, Vassilios <microdata-dev@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^40.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79