[tool.poetry]
name = "microdata-crypt"
version = "0.2.0"
description = "Python package for encrypting datasets in the microdata platform"
authors = ["microdata-developers"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
cryptography = "^41.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79